@@ -235,13 +235,17 @@ class FileSession(object):
         if len(t) != 2:
             return
         t = t[0]
-        sess_time = datetime.datetime(
-                int(t[0:4]),
-                int(t[4:6]),
-                int(t[6:8]),
-                int(t[8:10]),
-                int(t[10:12]),
-                int(t[12:14]))
+        try:
+            sess_time = datetime.datetime(
+                    int(t[0:4]),
+                    int(t[4:6]),
+                    int(t[6:8]),
+                    int(t[8:10]),
+                    int(t[10:12]),
+                    int(t[12:14]))
+        except ValueError:
+            # Probably not a session file at all
+            return
 
         if sess_time + exp_time < now:
             os.remove(os.path.join(self.session_file_path, f))
